--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,20 @@
   </head>
 
   <body>
+      <header class="row">
+    <div class="col-3">
+        LOGO
+      </div>
+      <div class="col-4">
+        Splurting out unsolicited advice about entreprenuership since 2016
+      </div>
+      <div class="col-5">
+         <%= link_to 'Contribute', '#' %>
+        <%= link_to 'About', '#' %>
+      </div>
+ 
+ <br class="clear"  />
+    </header>
     <%= yield %>
   </body>
 </html>
