--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,18 +12,37 @@
   <body>
       <header class="row">
     <div class="col-3">
+      <div class="circle">
+        <br />
+  You know
+  <br />
+  you need
+  <br />
+  to code
+        <br />
+        YOLO
+        <br />
+        LOL
+        <br />
+        OMG
+      </div>
         LOGO
       </div>
-      <div class="col-4">
+      <div class="col-4 slogan">
         Splurting out unsolicited advice about entreprenuership since 2016
       </div>
-      <div class="col-5">
+      <div class="col-5 links">
          <%= link_to 'Contribute', '#' %>
         <%= link_to 'About', '#' %>
       </div>
- 
+ </header>
+
+ <hr />
+
  <br class="clear"  />
-    </header>
+    
+
+
     <%= yield %>
   </body>
 </html>
