--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,4 +1,3 @@
-@import "bootstrap";
 
 .clear {
   clear: both;
@@ -38,6 +37,8 @@
   color: black;
   font-size: 25px;
   border-bottom: 1px solid #dfdfdf;
+   font-family: 'nobileregular', sans-serif;
+   font-weight: bold;
 }
 
 header {
@@ -46,4 +47,17 @@ header {
 
 hr {
   clear:both;
+}
+
+h1 {
+    font-family: 'nobileregular', sans-serif;
+    font-weight: bold;
+    font-size: 48px;
+  
+}
+
+h2 {
+   font-family: 'nobilemedium_italic', sans-serif;
+  font-weight: 600;
+  letter-spacing: -1.5px;
 }
