--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,26 @@
  <br class="clear"  />
     
 
+    <div class="container">
+      <%= yield %>
+    </div>
 
-    <%= yield %>
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+      
+         <%= link_to "This isn't enough, I need more", "#", class: 'next-quote' %>
+      </div>
+      <div class="col-6 footer-blurb">
+      
+        Proudly hacked by <a href="[YOUR_PORTFOLIO_URL]">[Oluwaseun Oyogho]</a><br />
+        Want to build your own Splurty Web App - <a href="https://online.bootcampspot.com">Learn how to code here</a>
+      </div>
+      </div>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
