--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <body>
       <header class="row">
     <div class="col-3">
+      <%= link_to root_path do %>
       <div class="circle">
         <br />
   You know
@@ -19,14 +20,8 @@
   you need
   <br />
   to code
-        <br />
-        YOLO
-        <br />
-        LOL
-        <br />
-        OMG
-      </div>
-        LOGO
+</div>
+       <%= link_to root_path, class: 'logo' do %>
       </div>
       <div class="col-4 slogan">
         Splurting out unsolicited advice about entreprenuership since 2016
@@ -51,7 +46,7 @@
         <div class="row">
           <div class="col-6">
       
-         <%= link_to "This isn't enough, I need more", "#", class: 'next-quote' %>
+        <%= link_to "This isn't enough, I need more", root_path, class: 'next-quote' %>
       </div>
       <div class="col-6 footer-blurb">
       
