--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
       <header class="row">
     <div class="col-3">
-      <%= link_to root_path do %>
+      <%= link_to root_path, class: 'logo' do %>
       <div class="circle">
         <br />
   You know
@@ -21,6 +21,7 @@
   <br />
   to code
 </div>
+ <% end %>
        <%= link_to root_path, class: 'logo' do %>
       </div>
       <div class="col-4 slogan">
@@ -56,7 +57,6 @@
       </div>
         </div>
       </div>
-    </div>
 
   </body>
 </html>
