--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,28 +10,28 @@
   </head>
 
   <body>
-      <header class="row">
-    <div class="col-3">
-      <%= link_to root_path, class: 'logo' do %>
+     <header class="row">
+  <div class="col-3">
+    
+    <%= link_to root_path, class: 'logo' do %>
       <div class="circle">
         <br />
-  You know
-  <br />
-  you need
-  <br />
-  to code
-</div>
- <% end %>
-       <%= link_to root_path, class: 'logo' do %>
+        You know
+        <br />
+        you need
+        <br />
+        to code
       </div>
-      <div class="col-4 slogan">
-        Splurting out unsolicited advice about entreprenuership since 2016
-      </div>
-      <div class="col-5 links">
-          <%= link_to 'Contribute', new_quote_path %>
-        <%= link_to 'About', '#' %>
-      </div>
- </header>
+    <% end %>
+  </div>
+  <div class="col-4 slogan">
+    Splurting out unsolicited advice about entrepreneurship since 2016
+  </div>
+  <div class="col-5 links">
+    <%= link_to 'Contribute', new_quote_path %>
+    <%= link_to 'About', '#' %>
+  </div>
+</header>
 
  <hr />
 
@@ -57,6 +57,7 @@
       </div>
         </div>
       </div>
+
 
   </body>
 </html>
