--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -5,7 +5,7 @@
   </p>
   <br />
   <p>
-    Together they taught hundreds of students how to code and build products people want at places like Harvard Business School, Carnegie Mellon, Babson, Rhode Island School of Design, Brown University, Punohou High School and ‘Iolani High School.
+    Together they taught hundreds of students how to code  build products people want at places like Harvard Business School, Carnegie Mellon, Babson, Rhode Island School of Design, Brown University, Punohou High School and ‘Iolani High School.
   </p>
   <p>
     If you want to learn how to code - start <a target="_blank" href="https://online.bootcampspot.com"> here</a>.
